// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flyout/FlyoutPresenter/FlyoutPresenter renders with all props 1`] = `
.emotion-3 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-2 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: auto;
  pointer-events: auto;
  opacity: 1;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<div
  className="emotion-3 hig__flyout-v1--top-center"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  >
    <button
      className="hig--light-theme hig__button-v1 hig__button-v1--size-standard hig__button-v1--type-primary hig__button-v1--width-shrink"
      href={undefined}
      onBlur={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={undefined}
      tabIndex="0"
      target={undefined}
    >
      <span
        className="hig__button__title"
      >
        Hello
      </span>
    </button>
  </div>
  <div
    className="emotion-2 hig__flyout-v1__container"
    style={
      Object {
        "left": "42px",
        "top": "42px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-1 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "42px",
          "top": "42px",
        }
      }
    >
      <div>
        I am a custom pointer
      </div>
    </div>
  </div>
</div>
`;

exports[`flyout/FlyoutPresenter/FlyoutPresenter renders without props 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: absolute;
  display: table;
  width: 100%;
  z-index: 9999;
  -webkit-transition-property: opacity,-webkit-transform;
  -webkit-transition-property: opacity,transform;
  transition-property: opacity,transform;
  -webkit-transition-duration: 250ms;
  transition-duration: 250ms;
  -webkit-transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  transition-timing-function: cubic-bezier(0.77,0,0.265,2);
  touch-action: none;
  pointer-events: none;
  opacity: 0;
  -webkit-transform: translateY(-4px);
  -ms-transform: translateY(-4px);
  transform: translateY(-4px);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-1 polygon:first-child {
  fill: transparent;
}

.emotion-1 polygon:last-child {
  fill: #ffffff;
}

<div
  className="emotion-4 hig__flyout-v1--exited hig__flyout-v1--top-left"
>
  <div
    className="emotion-0 hig__flyout-v1__action"
  />
  <div
    className="emotion-3 hig__flyout-v1__container"
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      aria-hidden="true"
      className="emotion-2 hig__flyout-v1__pointer-wrapper"
      role="presentation"
      style={
        Object {
          "left": "0px",
          "top": "0px",
        }
      }
    >
      <svg
        className="emotion-1"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <polygon
          points="0,12 12,0 24,12"
        />
        <polygon
          points="2.5,12 12,2.5 21.5,12"
        />
      </svg>
    </div>
  </div>
</div>
`;
